# sunime

./: Cargo.toml
crates/sunime-core/: Cargo.toml
crates/sunime-core/src/: compose.rs  lib.rs  pinyin.rs  pinyin_table.txt
crates/sunime-dict/: Cargo.toml
crates/sunime-dict/src/: build.rs  entry.rs  lib.rs  migrate.rs  reader.rs
crates/sunime-host/: Cargo.toml
crates/sunime-host/src/: engine.rs  main.rs  server.rs
crates/sunime-ipc/: Cargo.toml
crates/sunime-ipc/src/: lib.rs  messages.rs  pipe.rs
crates/sunime-ipc/tests/: pipe_test.rs
crates/sunime-reg/: Cargo.toml
crates/sunime-reg/src/: main.rs
crates/sunime-tsf/: Cargo.toml
crates/sunime-tsf/src/: ipc.rs  lib.rs  text_service.rs
scripts/: bench_rime.py  gen_pinyin_table.py  rime_to_tsv.py
src/: main.rs
