[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["于小丘 Yuerchu <admin@yuxiaoqiu.cn>"]
repository = "https://git.yxqi.cn/yuerchu/sunime"

[package]
name = "sunime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sunime"
path = "src/main.rs"

[dependencies]
sunime-core = { path = "crates/sunime-core" }
sunime-dict = { path = "crates/sunime-dict" }
rustyline = "15"
