[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["于小丘 Yuerchu <admin@yuxiaoqiu.cn>"]
repository = "https://github.com/Yuerchu/sunime"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_UI_TextServices",
  "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.62"

[package]
name = "sunime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sunime"
path = "src/main.rs"

[dependencies]
sunime-core = { path = "crates/sunime-core" }
sunime-dict = { path = "crates/sunime-dict" }
rustyline = "15"
crossterm = "0.28"
